--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,32 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        android:screenOrientation="landscape">
+
+        <activity android:name=".ActivityUser"
+            android:screenOrientation="portrait">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Main2Activity" />
-        <activity android:name=".Main3Activity" />
-        <activity android:name=".Main4Activity" />
-        <activity android:name=".Main5Activity" />
-        <activity android:name=".Main6Activity" />
-        <activity android:name=".Main7Activity" />
-        <activity android:name=".Main8Activity"></activity>
+        <activity android:name=".ActivityAskOne"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ActivityAskTwo"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ActivityAskThree"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ActivityAskFourth"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ActivityAskFive"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ActivityBoringResult"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ActivityPartyResult"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
